# engineering

./: README.md  pyproject.toml
engineering/: MOCK_GRADER_DAMAGE_README.md  README.md  SUPPLIER_PORTAL_SECURITY_V12_README.md  adt_six_wheel_status.js  adt_six_wheel_status.py  hooks.py  hooks.py.bak.20260527_131320  hooks.py.bak2  import_cost_codes.py  install_supplier_portal_security.py  install_tyre_dashboard.py  install_tyre_reports.py  mock_grader_utilisation.json  mock_tyre_survey_source.json  mock_tyre_surveys.py  patches.txt  repair_mock_tyre_surveys.py  seed_mock_tyre_damage.py  tyre_analytics.py  tyre_site_performance.py
engineering/api/: deviation_email.py  mobile.py
engineering/api_wearcheck/: importer.py.BAK_2026-02-05_0846  importer.py.BAK_2026-02-05_0847  importer.py.save
engineering/controllers/: ai_agent.py  hsec.py  importer.py  isambane_sample_input.py  legals_history_imports.py  notifications.py  whatsapp_breakdown_import.py
engineering/desktop_icon/: engineering.json
engineering/engineering/: utils.py
engineering/engineering/report/: availability_util_shared.py
engineering/fixtures/: custom_docperm.json  custom_field.json  role.json  service_interval.json
engineering/integrations/: raven_breakdown_notifications.py
engineering/patches/: update_isambane_opencast_mining_job_card_links.py
engineering/patches/v1_0_0/: create_isambane_opencast_mining_job_card.py
engineering/public/css/: engineering.css
engineering/scripts/: create_engineering_checklist_doctypes.py
engineering/workspace_sidebar/: engineering.json
(+398 files in other folders)
